--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 # Generated files
 bin/
 gen/
+out/
 
 # Gradle files
 .gradle/
@@ -32,3 +33,21 @@ proguard/
 # Android Studio captures folder
 captures/
 
+
+# IntelliJ
+*.iml
+.idea
+
+# in case anybody has a MAC
+.DS_Store
+
+# other editors
+*~
+*.bak
+
+# Keystore files
+# Uncomment the following line if you do not want to check your keystore files in.
+*.jks
+
+# External native build folder generated in Android Studio 2.2 and later
+.externalNativeBuild
