TextView Activity implementiert

--- a/ToggleApp/app/src/main/AndroidManifest.xml
+++ b/ToggleApp/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ToastActivity"
+            android:name=".TextViewActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
