--- a/ToggleApp/app/src/main/AndroidManifest.xml
+++ b/ToggleApp/app/src/main/AndroidManifest.xml
@@ -10,13 +10,25 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".TimePickerActivity"
+            android:name=".ListViewActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ToastActivity"/>
+        <activity android:name=".TextViewActivity"/>
+        <activity android:name=".EditTextActivity"/>
+        <activity android:name=".CheckBoxActivity"/>
+        <activity android:name=".RadioGroupActivity"/>
+        <activity android:name=".SpinnerActivity"/>
+        <activity android:name=".ScrollViewActivity"/>
+        <activity android:name=".DatePickerActivity"/>
+        <activity android:name=".TimePickerActivity"/>
+        <activity android:name=".MainActivity"/>
+
 
     </application>
 
