--- a/Layouts/app/src/main/AndroidManifest.xml
+++ b/Layouts/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".FrameLayout"/>
         <activity android:name=".LinearLayout"/>
+        <activity android:name=".TableLayout"/>
 
     </application>
 
