--- a/Layouts/app/src/main/AndroidManifest.xml
+++ b/Layouts/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".TableLayout"/>
         <activity android:name=".GridLayout"/>
         <activity android:name=".RelativeLayout"/>
+        <activity android:name=".ConstraintLayout"/>
 
     </application>
 
