--- a/Preferences/app/build.gradle
+++ b/Preferences/app/build.gradle
@@ -35,4 +35,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //preference
+    def preference_version = '1.1.0'
+    implementation "androidx.preference:preference:$preference_version"
 }
