--- a/Intents/app/src/main/AndroidManifest.xml
+++ b/Intents/app/src/main/AndroidManifest.xml
@@ -8,6 +8,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Intents" />
+        android:theme="@style/Theme.Intents">
+
+        <activity
+            android:name=".Intents"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Ziel"/>
+
+    </application>
 
 </manifest>
