--- a/DB/app/build.gradle
+++ b/DB/app/build.gradle
@@ -32,7 +32,7 @@ def room_version="2.2.5"
 
 dependencies {
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "andoix.room:room-compiler:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
