Game Logic geht

--- a/NumberGuess/app/src/main/AndroidManifest.xml
+++ b/NumberGuess/app/src/main/AndroidManifest.xml
@@ -8,6 +8,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NumberGuess" />
+        android:theme="@style/Theme.NumberGuess" >
+        <activity
+            android:name=".Lobby"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Play"/>
+        <activity android:name=".Highscore"/>
 
+    </application>
 </manifest>
